@@ -18,5 +18,6 @@ Other changes:
 . No support for building packages extensions yet
 . A zip file can be built beside a tarball
 . Source repo can be a local folder, besides git and svn
+. Creation of share/filelist.md5 file is optional
 . Configuration file is now pake/options-$ext.yaml instead of ant/$ext.properties.
   A build task is available to automatically convert the old format to the new one
